--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,7 @@ jobs:
       - name: Generate Allure Report
         run: |
           npm install -g allure-commandline
+          allure generate --clean
           allure serve
       
       - name: Upload Allure Report Artifacts
